Fix #100 Double border on focus
Also update focus and hover states for <summary>.

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -147,8 +147,11 @@ select {
   padding: 0.45rem 0.5rem;
 }
 
+details {
+  padding: 0.5rem;
+}
+
 summary {
-  min-height: 2.25rem;
   display: flex;
   align-items: center;
 }
